--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -74,7 +74,7 @@
                         <div class="flex items-center">
                             <i class="fas fa-pen text-blue-500 text-3xl mr-4"></i>
                             <div class="text-right">
-                                <h3 class="text-2xl font-bold text-blue-700">278</h3>
+                                <h3 class="text-2xl font-bold text-blue-700">{{postCount}}</h3>
                                 <span class="text-gray-600">New Posts</span>
                             </div>
                         </div>
