--- a/src/app/components/single-blog-card/single-blog-card.component.html
+++ b/src/app/components/single-blog-card/single-blog-card.component.html
@@ -49,7 +49,7 @@
                         <div class="flex items-center gap-x-4 text-xs">
                             <time datetime="2020-03-16" class="text-gray-500">{{latest.createdAt | date }}</time>
                             <a href="#"
-                                class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">{{latest.category.category}}</a>
+                                class="relative z-10 rounded-full bg-gray-50 px-3 py-1.5 font-medium text-gray-600 hover:bg-gray-100">{{latest.categoryName}}</a>
                         </div>
                         <div class="group relative">
                             <h3 class="mt-3 text-lg font-semibold leading-6 text-gray-900 group-hover:text-gray-600">
