--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -113,7 +113,7 @@
                         <div class="flex items-center">
                             <i class="fas fa-eye text-red-500 text-3xl mr-4"></i>
                             <div class="text-right">
-                                <h3 class="text-2xl font-bold text-red-700">423</h3>
+                                <h3 class="text-2xl font-bold text-red-700">{{totalViews}}</h3>
                                 <span class="text-gray-600">Total Visits</span>
                             </div>
                         </div>
@@ -122,6 +122,14 @@
             </div>
         </div>
     </section>
+
+
+    <div id="pie-chart" class="my-5  "></div>
+
+    <div id="chart-container" ></div>
+
+
+
 
     <section id="stats-subtitle">
         <div class="grid grid-cols-1 sm:grid-cols-2 gap-4">
