--- a/src/app/components/single-blog-card/single-blog-card.component.html
+++ b/src/app/components/single-blog-card/single-blog-card.component.html
@@ -5,11 +5,14 @@
         <div class="row">
             <div class="col-lg-8">
                 <article class="flex max-w-xl mx-auto flex-col items-start justify-between">
-                    <div class="flex items-center gap-x-4 text-xs">
-                        <time datetime="2020-03-16" class="text-gray-500">{{postData.createdAt | date}}</time>
+                     <div class="flex justify-between items-center w-full text-xs text-gray-500">
+                        <time datetime="2020-03-16" class="ml-2 text-gray-500">{{postData.createdAt | date}}</time>
+                        <div class="flex mr-2 items-center text-gray-500">
+                            <i class="far fa-eye mr-1"></i>{{ postData.views }}
+                          </div>
                     </div>
                     <div class="group relative">
-                        <img class="w-full mt-2 h-80 object-cover object-center" [src]="postData.imgPath" alt="">
+                        <img class="w-full mt-2 h-80 rounded-xl object-cover object-center" [src]="postData.imgPath" alt="">
                         <h1 class="mt-3 text-4xl font-bold leading-10 text-gray-900 group-hover:text-gray-600">
                             <a href="#">
                                 <span class="absolute inset-0"></span>
