--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -6,7 +6,8 @@
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-4 gap-4">
             <div class="col-span-full mt-3 mb-1">
                 <h4 class="text-3xl text">DASHBOARD</h4>
-                <p class="text-md">Welcome, {{activeUser}}!<p>
+                <p class="text-md">Welcome, {{activeUser}}!
+                <p>
             </div>
             <a routerLink="/addcategory" class="col-span-1 sm:col-span-2 lg:col-span-1 ">
                 <div class="bg-blue-100 rounded-lg overflow-hidden shadow-md">
@@ -123,11 +124,11 @@
         </div>
     </section>
 
+    <!-- <div class="flex flex-row"> -->
+        <div id="pie-chart" class="my-5  "></div>
 
-    <div id="pie-chart" class="my-5  "></div>
-
-    <div id="chart-container" ></div>
-
+        <div id="chart-container" class="my-5"></div>
+    <!-- </div> -->
 
 
 
